set z-indexes for all fixed navigation elements

--- a/app/assets/stylesheets/application/_common.css.scss
+++ b/app/assets/stylesheets/application/_common.css.scss
@@ -72,7 +72,7 @@ small {
   color: lighten($ci_blue, 50%);
   display: inline-block;
   width: 100%;
-  @include z-index('1003', 'fixed');
+  @include z-index('103', 'fixed');
   top: 0;
   // white shadow to fade away scrolled content smoothly
   @include box-shadow($ci_bg-color 0 1px 20px 10px);
