--- a/app/assets/stylesheets/application/_toolbar.css.scss
+++ b/app/assets/stylesheets/application/_toolbar.css.scss
@@ -1,6 +1,8 @@
 [role=toolbar] {
   @include clearfix;
 
+  @include z-index(102);
+
   padding: 15px 0;
 
   .button-group :last-child {
